# BK_Campus

./: .gitignore  FacebookSession.py  LinkCollector.py  PostFilter.py  PostScraper.py  SaveSupaBase.py  data_preprocessing.py  main.py  proxy.py  structure.txt
ai_engine/: README.md  pyproject.toml  requirements.txt
ai_engine/deployment/: merge.py
ai_engine/deployment/core1_crawler/: Dockerfile  ai_rcm.py  data_preprocessing.py  deployment.lnk  main.py
ai_engine/deployment/core1_crawler_proxy/: Dockerfile  main.py  utils.py
ai_engine/deployment/core2/: main.py
ai_engine/deployment/core2_llama/: Dockerfile  main.py
ai_engine/deployment/core2_quant/: main.py  origin_clip.py  quantize_clip.py  safe_quantize.py
ai_engine/deployment/core3_distilCLIP/: distil_clip_to_sb.py  main.py
ai_engine/deployment/core4_matching/: Dockerfile  README.md  start.sh
ai_engine/matching_module/: celery_app.py  config.py  database.py  matching.py
ai_engine/src/: checking_data.py
ai_engine/src/core1_filtering/: core12_fusion.py  core1_groq.py  core1_groq_2.py  core1_groq_21.py  core1_openai.py  data_splitting.py  example.py  origin_clip.py
ai_engine/src/core2_matching/: clip_multi.py  csv_processor.py  distil_clip.py  distil_clip_2.py  distil_quantize.py  dual_clip.py  example.py  results.txt
ai_engine/src/fb_crawler/: crawl_combined.py  crawl_to_sb.py  crawl_to_sb_2.py  crawl_to_sb_combine.py  crawl_to_sb_time.py  crawler.py  crawlface-copy.py  crawlface.py  d41d8cd9.env  fb_state.json  fb_state_mbasic.json  ued_confessions_data_final.csv
client/: index.html  (+2 more)
(+150 files in other folders)
